Add search to feats
